aks_yamlmanifests/security/poi.aad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poi
  labels:
    aadpodidbinding: $POD_IDENTITY_NAME
	tier: poi
  role: backend
  namespace: $($POD_IDENTITY_NAMESPACE)
spec:
  containers:
  - name: poi
    image: registrygzx5650.azurecr.io/poi:1.0 
    volumeMounts:
    - name: vm-secrets-hacker05
      mountPath: "/mnt/secrets-store"
      readOnly: true
  volumes:
  - name: vm-secrets-hacker05
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: $($secretProviderClassName)
