aks_yamlmanifests/security/user-java.aad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    tier: user-java
    aadpodidbinding: $POD_IDENTITY_NAME
  name: user-java
  namespace: api
spec:
  containers:
  - image: registrygzx5650.azurecr.io/user-java:1.0
    name: user-java
    volumeMounts:
    - name: vm-secrets-hacker05
      mountPath: "/mnt/secrets-store"
      readOnly: true
  volumes:
  - name: vm-secrets-hacker05
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: $($secretProviderClassName)
