aks_yamlmanifests/security/userprofile.aad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: userprofile
  labels:
    aadpodidbinding: $POD_IDENTITY_NAME
	tier: userprofile
  namespace: $($POD_IDENTITY_NAMESPACE)
spec:
  containers:
  - name: userprofile
    image: registrygzx5650.azurecr.io/userprofile:1.0
    volumeMounts:
    - name: vm-secrets-hacker05
      mountPath: "/mnt/secrets-store"
      readOnly: true
  volumes:
  - name: vm-secrets-hacker05
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: $($secretProviderClassName)
