aks_yamlmanifests/security/ingress.yaml
## The ingress should be in the same namespace or use the external name
# https://stackoverflow.com/questions/59844622/ingress-configuration-for-k8s-in-different-namespaces


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer-service 
            port:
              number: 80
  - host: frontend.20.86.192.252.nip.io # change the IP address here
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: tripviewer-service 
            port:
              number: 80          
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true" 
spec:
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      - path: /api/user-java(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userjava-service
            port:
              number: 80
  - host: backend.20.86.192.252.nip.io
    http:
      paths:
      - path: /api/poi(.*)
        pathType: Prefix
        backend:
          service:
            name: poi-service 
            port:
              number: 80
      - path: /api/trips(.*)
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/user(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      - path: /api/user-java(.*)
        pathType: Prefix
        backend:
          service:
            name: userjava-service
            port:
              number: 80
