aks_yamlmanifests/security/userprofile-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: userprofile-policy
  namespace: api
spec:
  podSelector:
    matchLabels:
      tier: userprofile
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: web
      podSelector:
        matchLabels:
          tier: tripviewer
